# gh-mcp-test

./: .gitignore  CLAUDE.md  LICENSE  README.md  __main__.py  cli.py  main.py  package-lock.json  package.json  pyproject.toml  ruff.toml
api/boot/: app.py  auth.py  database.py  dependencies.py
api/commands/: __init__.py  database.py  serve.py  shell.py  version.py
api/commands/shell_helpers/: __init__.py  create_admin_user.py
api/models/: __init__.py  comment.py  post.py  user.py
api/routers/: __init__.py  auth.py  comments.py  posts.py
api/schemas/: __init__.py  user.py
api/services/repositories/: __init__.py  base_repository.py  comments_repository.py  posts_repository.py
api/setup/: app.py  auth.py  database.py  dependencies.py
frontend/: .prettierrc  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/components/auth/: Account.svelte  SignInForm.svelte  SignUpForm.svelte
frontend/src/lib/: api-generated-types.ts  api-types.ts  auth-client.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/(auth)/login/: +page.svelte
frontend/src/routes/(auth)/signup/: +page.svelte
frontend/src/routes/posts/: +page.svelte  +page.ts  PostItem.svelte
frontend/src/routes/posts/edit/[id]/: +page.svelte  +page.ts
migrations/: env.py
migrations/versions/: 00d6476446ac_add_comment_model.py  08900080ac0c_generate_user_table.py  46d94b80a405_add_comment_model.py  77b176187d11_create_tables.py  9c6eb32d6cc2_add_comment_model_with_cascade_deletes.py  a2622bd874d5_generate_post_table.py
tests/: test_cli.py  test_posts_controller.py  test_posts_repository.py  test_user_post_relationship.py
tests/commands/: test_cli.py
tests/models/: test_comment_relationships.py  test_user_post_relationship.py
tests/routers/: test_comments_router.py  test_posts_router.py
tests/services/repositories/: test_comments_repository.py  test_posts_repository.py
