[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-app"
version = "0.1.0"
description = "A FastAPI application with Typer CLI interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "sqlmodel>=0.0.24",
    "typer>=0.12.0",
]

[project.scripts]
fastapi-app = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["api"]
artifacts = ["cli.py", "__main__.py"]

[tool.uv]
package = true
