[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-app"
version = "0.1.0"
description = "A FastAPI application with Typer CLI interface"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "fastapi[standard]>=0.116.2",
    "ipython>=9.5.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "sqlmodel>=0.0.24",
    "typer>=0.12.0",
]

[project.scripts]
fastapi-app = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["api"]
artifacts = ["cli.py", "__main__.py"]

[tool.uv]
package = true

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "asyncio: marks tests as async",
    "slow: marks tests as slow",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
    "ruff>=0.13.1",
]

[tool.basedpyright]
# Basic configuration
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportMissingTypeStubs = "warning"

# Relax common warnings
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownParameterType = "warning"
reportGeneralTypeIssues = "warning"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"
reportPrivateUsage = "warning"
reportConstantRedefinition = "warning"
reportIncompatibleMethodOverride = "warning"
reportIncompatibleVariableOverride = "warning"
reportUntypedFunctionDecorator = "none"
reportUntypedClassDecorator = "none"
reportUntypedBaseClass = "warning"
reportUntypedNamedTuple = "none"

# Include/exclude paths
include = [
    "api",
    "cli.py",
    "__main__.py"
]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/node_modules",
    "**/.git",
    "**/build",
    "**/dist"
]
